--- a/src/main/webapp/scripts/app/entities/reservation/reservations.html
+++ b/src/main/webapp/scripts/app/entities/reservation/reservations.html
@@ -1,6 +1,6 @@
 <div>
     <h2>Reservations</h2>
-    <jh-alert></jh-alert>
+    <jh-alert-error></jh-alert-error>
     <div class="container-fluid">
         <div class="row">
             <div class="col-xs-4 no-padding-left">
@@ -60,21 +60,36 @@
                     <td class="text-right">
                         <div class="btn-group flex-btn-group-container">
                             <button type="submit"
+                                    ng-click="confirm(reservation.id)"
+                                    class="btn btn-success btn-sm">
+                                <span class="glyphicon glyphicon-ok"></span>
+                                <span class="hidden-xs hidden-sm"></span>
+                            </button>
+                            <button type="submit"
+                                    ng-click="close(reservation.id)"
+                                    class="btn btn-danger btn-sm">
+                                <span class="glyphicon glyphicon-remove-circle"></span>
+                                <span class="hidden-xs hidden-sm"></span>
+                            </button>
+                        </div>
+
+                        <div class="btn-group flex-btn-group-container">
+                                <button type="submit"
                                     ui-sref="reservation.detail({id:reservation.id})"
-                                    class="btn btn-info btn-sm">
+                                    class="btn btn-info btn-xs">
                                 <span class="glyphicon glyphicon-eye-open"></span>
                                 <span class="hidden-xs hidden-sm"></span>
                             </button>
                             <button type="submit"
                                     ui-sref="reservation.edit({id:reservation.id})"
-                                    class="btn btn-primary btn-sm">
+                                    class="btn btn-primary btn-xs">
                                 <span class="glyphicon glyphicon-pencil"></span>
                                 <span class="hidden-xs hidden-sm"></span>
                             </button>
                             <button type="submit"
                                     ui-sref="reservation.delete({id:reservation.id})"
-                                    class="btn btn-danger btn-sm">
-                                <span class="glyphicon glyphicon-remove-circle"></span>
+                                    class="btn btn-danger btn-xs">
+                                <span class="glyphicon glyphicon-trash "></span>
                                 <span class="hidden-xs hidden-sm"></span>
                             </button>
                         </div>
