search reservation stable

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -165,7 +165,8 @@
     <script src="scripts/app/entities/reservation/reservation-dialog.controller.js"></script>
     <script src="scripts/app/entities/reservation/reservation-delete-dialog.controller.js"></script>
     <script src="scripts/app/entities/reservation/reservation-detail.controller.js"></script>
-    <script src="scripts/components/entities/reservation/reservation.service.js"></script>
+        <script src="scripts/app/entities/reservation/reservation.directive.js"></script>
+        <script src="scripts/components/entities/reservation/reservation.service.js"></script>
     <script src="scripts/components/entities/reservation/reservation.search.service.js"></script>
     <!-- endbuild -->
 </body>
