--- a/src/main/webapp/scripts/app/entities/reservation/reservation-detail.html
+++ b/src/main/webapp/scripts/app/entities/reservation/reservation-detail.html
@@ -39,7 +39,7 @@
                     <span>Status</span>
                 </td>
                 <td>
-                    <span class="form-control-static">{{reservation.status}}</span>
+                    <rsrv-status reservation="reservation"></rsrv-status>
                 </td>
             </tr>
             <tr>
