--- a/src/main/webapp/scripts/app/entities/reservation/reservation-dialog.html
+++ b/src/main/webapp/scripts/app/entities/reservation/reservation-dialog.html
@@ -63,7 +63,7 @@
         </div>
         <div class="form-group">
             <label class="aria-label">Status</label>
-            <span class="label label-success">{{reservation.status}}</span>
+            <rsrv-status reservation="reservation"></rsrv-status>
         </div>
 
         <div class="form-group">
