--- a/src/main/webapp/scripts/app/entities/reservation/reservations.html
+++ b/src/main/webapp/scripts/app/entities/reservation/reservations.html
@@ -24,6 +24,16 @@
                 </form>
             </div>
         </div>
+        <div ng-show="filterMessage" class="row">
+            <div class="col-xs-4 no-padding-left"></div>
+            <div class="col-xs-8 no-padding-right">
+                    <button class="btn btn-default" ng-click="clearFilter()">
+                        <span class="glyphicon glyphicon-filter"></span>
+                        {{filterMessage}}
+                        <span class="glyphicon glyphicon-remove"></span>
+                    </button>
+            </div>
+        </div>
     </div>
     <br/>
     <div class="table-responsive">
@@ -62,9 +72,10 @@
                     <td class="text-right">
                         <div class="btn-group flex-btn-group-container">
                             <button type="submit"
+                                    ng-show="!reservation.closed"
                                     ng-click="getClashing(reservation)"
-                                    class="btn btn-info btn-sm">
-                                <span class="glyphicon glyphicon-eye-open"></span>
+                                    class="btn btn-danger btn-sm">
+                                <span class="glyphicon glyphicon-flash"></span>
                                 <span class="hidden-xs hidden-sm"></span>
                             </button>
                             <button type="submit"
