able to show a list

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,6 +11,7 @@
         <!-- bower:css -->
         <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.css" />
         <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+        <link rel="stylesheet" href="bower_components/fullcalendar/dist/fullcalendar.css" />
         <!-- endbower -->
         <!-- endbuild -->
         <!-- build:css assets/styles/main.css -->
@@ -59,6 +60,9 @@
         <script src="bower_components/ng-file-upload/ng-file-upload.js"></script>
         <script src="bower_components/ngInfiniteScroll/build/ng-infinite-scroll.js"></script>
         <script src="bower_components/underscore/underscore.js"></script>
+        <script src="bower_components/moment/moment.js"></script>
+        <script src="bower_components/fullcalendar/dist/fullcalendar.js"></script>
+        <script src="bower_components/angular-ui-calendar/src/calendar.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
@@ -169,5 +173,6 @@
         <script src="scripts/components/entities/reservation/reservation.service.js"></script>
     <script src="scripts/components/entities/reservation/reservation.search.service.js"></script>
     <!-- endbuild -->
-</body>
+        <script src="scripts/app/entities/reservation/reservation-calendar.controller.js"></script>
+    </body>
 </html>
