--- a/src/main/webapp/scripts/app/entities/reservation/reservations.html
+++ b/src/main/webapp/scripts/app/entities/reservation/reservations.html
@@ -3,11 +3,19 @@
     <jh-alert-error></jh-alert-error>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-xs-4 no-padding-left">
+            <div class="col-xs-2 no-padding-left">
                 <button class="btn btn-primary" ui-sref="reservation.new" >
                     <span class="glyphicon glyphicon-plus"></span>
                     <span
                         class="hidden-xs">Create new Reservation
+                    </span>
+                </button>
+            </div>
+            <div class="col-xs-2">
+                <button class="btn btn-info" ui-sref="reservation.calendar" >
+                    <span class="glyphicon glyphicon-calendar"></span>
+                    <span
+                        class="hidden-xs">Show Calendar
                     </span>
                 </button>
             </div>
